fixed zoom on ios probably?

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -169,7 +169,7 @@ footer {
 
     margin-left: 8px;
     margin-right: 8px;
-    margin-top: 8px;
+    margin-top: 16px;
     margin-bottom: 16px;
 
 }
@@ -259,15 +259,16 @@ footer {
 
 .todoListItem {
     width: 90%;
+    margin-bottom: 16px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: top;
     padding: 8px;
     background-color: rgb(255, 255, 255);
-    border: #000000 solid 1px;
+    border: #919191 solid 1px;
     border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 1);
+    box-shadow: 0px 2px 4px rgb(141, 141, 141);
 
 }
 
@@ -294,18 +295,6 @@ footer {
     box-sizing: border-box;
 }
 
-/* #profileButton {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 32px;
-    height: 32px;
-}
-
-#deleteButton {
-    width: 32px;
-    height: 32px;
-} */
 
 #profileButton {
     width: 34px;
@@ -379,24 +368,3 @@ footer {
     box-sizing: border-box;
 }
 
-
-/* #profileButtons {
-   
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-   
-    color: rgb(255, 255, 255);
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    margin: 8px;
-
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-
-    margin: 0px;
-    box-sizing: border-box;
-} */
